--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "axios": "^1.11.0",
+    "d3-shape": "^3.2.0",
     "date-fns": "^4.1.0",
     "jwt-decode": "^4.0.0",
     "motion": "^12.23.12",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "recharts": "^3.1.2",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
