--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,16 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.12.2",
     "axios": "^1.11.0",
     "d3-shape": "^3.2.0",
     "date-fns": "^4.1.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.4",
     "jwt-decode": "^4.0.0",
     "motion": "^12.23.12",
     "next": "15.5.2",
+    "ogl": "^1.0.11",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "recharts": "^3.1.2",
