--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,10 +17,10 @@
     "jspdf": "^3.0.4",
     "jwt-decode": "^4.0.0",
     "motion": "^12.23.12",
-    "next": "15.5.2",
+    "next": "^15.5.7",
     "ogl": "^1.0.11",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "recharts": "^3.1.2",
     "socket.io-client": "^4.8.1"
   },
@@ -28,7 +28,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "eslint": "^9",
-    "eslint-config-next": "15.5.2",
+    "eslint-config-next": "^16.0.7",
     "tailwindcss": "^4"
   }
 }
